--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 /.idea
 # Ignore bundler config.
 /.bundle
-/Gemfile.lock
+Gemfile.lock
+.env
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
